--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,24 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "Universe Skyblock",
-		"description": "Utilizing Chest UI",
+		"name": "Universe Skyblock REALM VERSION",
+		"description": "Utilizing Chest UI (realm version)",
 		"uuid": "bab76941-4584-47c4-b257-e5ca85c3d534",
-		"version": [ 1, 5, 0 ],
+		"version": [ 1, 0, 1 ],
 		"min_engine_version": [ 1, 21, 0 ]
 	},
 	"modules": [
 		{
 			"type": "data",
 			"uuid": "84d5a89b-8dcc-0308-a7d7-fd5f8123bba7",
-			"version": [ 1, 5, 0 ]
+			"version": [ 1, 0, 1 ]
 		},
 		{
 			"type": "script",
 			"language": "javascript",
 			"entry": "scripts/index.js",
 			"uuid": "2fa09013-80e6-c43a-e1c7-73dafb30fdd0",
-			"version": [ 1, 5, 0 ]
+			"version": [ 1, 0, 1 ]
 		}
 	],
 	"metadata": {
